--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,12 +7,12 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Platypus UCSD
-email: your-email@example.com
+title: Platypus Phoenix
+email: platypusphoenixaz@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  The Platypus Affiliated Society at the <a href="https://ucsd.edu/">University of California, San Diego</a>.
+  The Platypus Affiliated Society in Phoenix, AZ.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "platypus-ucsd.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "platypus-phoenix.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 logo: /assets/img/logo.png
 
 # Build settings
